添加移除链表的算法

--- a/suanfa.vcxproj.filters
+++ b/suanfa.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="螺旋数组.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="移除链表.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
