--- a/suanfa.vcxproj
+++ b/suanfa.vcxproj
@@ -126,6 +126,7 @@
     <ClCompile Include="二分查找.cpp" />
     <ClCompile Include="有序数组的平方.cpp" />
     <ClCompile Include="移除元素.cpp" />
+    <ClCompile Include="移除链表.cpp" />
     <ClCompile Include="螺旋数组.cpp" />
     <ClCompile Include="长度最小的子数组.cpp" />
   </ItemGroup>
